<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main_image_back"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_menu"
        android:scaleType="centerCrop"
        android:contentDescription="@string/mainimage" />

    <ImageButton
        android:id="@+id/button_main_start_game"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="100dp"
        android:background="@drawable/menu_button_round"
        android:src="@drawable/icon_menu_start"
        android:text="@string/button_start_game"
        style="@style/MenuButton"/>

    <ImageButton
        android:id="@+id/button_main_quit"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="100dp"
        android:background="@drawable/menu_button_round"
        android:src="@drawable/icon_menu_exit"
        android:text="@string/button_quit"
        style="@style/MenuButton"
        android:layout_marginStart="100dp" />

    <ImageButton
        android:id="@+id/button_main_rating"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="50dp"
        android:layout_marginRight="100dp"
        android:background="@drawable/menu_button_round"
        android:src="@drawable/icon_menu_rating"
        android:text="@string/button_rating"
        style="@style/MenuButton"
        android:layout_marginEnd="100dp" />

</FrameLayout>